Fix tooltips not showing and info icon not being on top of button

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -299,7 +299,7 @@ form {
     }
 
     .glyphicon {
-      z-index: -1;
+      position: inherit;
     }
 
     input, select, textarea {
